changes to main handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,30 +2,39 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MVC Tech Blog</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MVC Tech Blog</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-    <div>
-        <header>
-            <nav>
-                <a href="">Home</a>
-                <a href="">Dashboard</a>
-                <a href="">Logout</a>
-            </nav>
-            <h1> The Tech Blog</h1>
-        </header>
-    </div>
+  <div class="wrapper">
+      <header class="hero">
+          <div>
+            <nav class"nav">
+                    <a class="link" href="/">Home</a>
+                    <a class="link" href="/dashboard">Dashboard</a>
+                    {{#if loggedIn}}
+                    <a class="link" href="/" id="logout">Logout</a>
+                    {{else}}
+                    <a class="link" href="/login">Login</a>
+                    {{/if}}
+                </nav>          
+          </div>
 
-    {{{ body }}}
+          <h1 class="app-title"><i class="fab "></i>The Tech Blog</h1>
+      </header>
 
+    <main>
+      {{{ body }}}
+    </main>
+  </div>
 
-<script src="/js/script.js"></script>
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
+
 </body>
-
-
 
 </html>
