sold pathing issue by spelling error

--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -12,5 +12,5 @@
 
 
 
-<script src="/javascript/edit-post.js"></script>
-<script src="/javascript/delete-post.js"></script>
+<script src="/css/js/edit-post.js"></script>
+<script src="/css/js/delete-post.js"></script>
