--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MVC Tech Blog</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <div class="wrapper">
       <header class="hero">
           <div>
-            <nav class"nav">
+            <nav class="nav">
                     <a class="link" href="/">Home</a>
                     <a class="link" href="/dashboard">Dashboard</a>
                     {{#if loggedIn}}
@@ -23,7 +23,7 @@
                 </nav>          
           </div>
 
-          <h1 class="app-title"><i class="fab "></i>The Tech Blog</h1>
+          <h1 class="app-title"><i class="fab"></i>The Tech Blog</h1>
       </header>
 
     <main>
@@ -32,7 +32,7 @@
   </div>
 
     {{#if loggedIn}}
-    <script src="/javascript/logout.js"></script>
+    <script src="/css/js/logout.js"></script>
     {{/if}}
 
 </body>
