handler bar routes resolved

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -16,5 +16,5 @@
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-<script src="/css/js/comment.js"></script>
+<script src="/js/comment.js"></script>
 {{/if}}
