--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
   </div>
 
     {{#if loggedIn}}
-    <script src="/css/js/logout.js"></script>
+    <script src="/js/logout.js"></script>
     {{/if}}
 
 </body>
